Fix minor spacing issues on landing page

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -21,7 +21,7 @@
   margin: .4rem;
 
     .prof-pic {
-    width: 28vw;
+    width: 20vw;
     height: auto;
     border-radius: 20%;
   }
