--- a/src/Components/LandingPage/LandingPage.scss
+++ b/src/Components/LandingPage/LandingPage.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     height: 30%;
-    margin-top: 5em;
+    margin-top: 8em;
   }
 
   .logo {
@@ -89,8 +89,6 @@
     border-top: .1em solid black;
     text-decoration: none;
     width: 100vw;
-    margin-top: 3rem;
-
   }
 
   .landing-page-link {
